katalog/tests/nginx-ldap-auth/httpbin.yaml
# Copyright (c) 2020 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: secured-nip-io
  annotations:
    kubernetes.io/ingress.class: "external"
spec:
  rules:
  - host: "*.nip.io"
    http:
      paths:
      - backend:
          serviceName: httpbin
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpbin
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  strategy: {}
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - image: reg.sighup.io/sighupio/fury/kennethreitz/httpbin:latest
        name: httpbin
        ports:
        - containerPort: 80
        resources: {}
