katalog/tests/nginx-ldap-auth/ldap-registry.yaml
# Copyright (c) 2020 SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  annotations:
    kubernetes.io/ingress.class: "external"
    nginx.ingress.kubernetes.io/auth-url: http://nginx-ldap-auth.ingress-nginx.svc.cluster.local
spec:
  rules:
  - host: "registry.local"
    http:
      paths:
      - backend:
          serviceName: registry
          servicePort: 5000
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: registry
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 3Gi
---
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    run: registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: registry
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      run: registry
  strategy: {}
  template:
    metadata:
      labels:
        run: registry
    spec:
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: registry
      containers:
      - image: registry.sighup.io/fury/registry:2.7.1
        name: registry
        ports:
        - containerPort: 5000
        resources: {}
        volumeMounts:
        - name: storage
          mountPath: /var/lib/registry
