katalog/tests/nginx-ldap-auth/ldap-server.yaml
---
apiVersion: v1
kind: Secret
metadata:
  labels:
    app: ldap-server
  name: ldap
stringData:
  LDAP_ADMIN_PASSWORD: HatFriday
---
kind: ConfigMap
metadata:
  labels:
    app: ldap-server
  name: ldap
apiVersion: v1
data:
  LDAP_ORGANISATION: SIGHUP
  LDAP_DOMAIN: sighup.io
---
kind: ConfigMap
metadata:
  labels:
    app: ldap-server
  name: ldap-ldif
apiVersion: v1
data:
  sighup.io.ldif: |+
    version: 1

    dn: ou=system,dc=sighup,dc=io
    objectClass: top
    objectClass: organizationalUnit
    ou: system

    dn: ou=group-a,ou=system,dc=sighup,dc=io
    objectClass: top
    objectClass: organizationalUnit
    ou: group-a

    dn: ou=group-b,ou=system,dc=sighup,dc=io
    objectClass: top
    objectClass: organizationalUnit
    ou: group-b

    dn: cn=angel+sn=barrera+userPassword=angel,ou=group-a,ou=system,dc=sighup,dc=io
    objectClass: top
    objectClass: person
    cn: angel
    sn: barrera
    userPassword: angel

    dn: cn=ramiro+sn=algozino+userPassword=ramiro,ou=group-b,ou=system,dc=sighup,dc=io
    objectClass: top
    objectClass: person
    cn: ramiro
    sn: algozino
    userPassword: ramiro
---
apiVersion: v1
kind: Service
metadata:
  name: ldap-server
spec:
  ports:
  - name: "tcp-389"
    port: 389
    protocol: TCP
    targetPort: 389
  - name: "tcp-363"
    port: 636
    protocol: TCP
    targetPort: 636
  selector:
    app: ldap-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ldap-server
  name: ldap-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ldap-server
  strategy: {}
  template:
    metadata:
      labels:
        app: ldap-server
    spec:
      volumes:
      - name: ldap-ldif
        configMap:
          name: ldap-ldif
      containers:
      - name: ldap-server
        image: osixia/openldap:1.3.0
        command:
          - "sh"
          - "-c"
          - "cp -R /tmp/ldif /container/service/slapd/assets/config/bootstrap/ldif/custom && /container/tool/run"
        envFrom:
        - configMapRef:
            name: ldap
        - secretRef:
            name: ldap
        ports:
        - containerPort: 389
          name: "tcp-389"
        - containerPort: 636
          name: "tcp-636"
        resources: {}
        volumeMounts:
          - name: ldap-ldif
            mountPath: /tmp/ldif
