katalog/tests/nginx-ldap-auth/nginx-ldap-auth-config-groups.yaml
web: 0.0.0.0:5555
path: /
servers:
  - ldap://ldap-server.demo-ldap.svc.cluster.local
auth:
  bindDN: cn=admin,dc=sighup,dc=io
  bindPW: HatFriday
user:
  baseDN: ou=people,dc=sighup,dc=io
  filter: "(cn={0})"
  requiredGroups:
  - amministrazione
  - engineering
group:
  baseDN: ou=groups,dc=sighup,dc=io
  groupAttr: cn
  filter: "(member={0})"
