katalog/tests/nginx-ldap-auth/nginx-ldap-auth-config.yaml
web: 0.0.0.0:5555
path: /
servers:
  - ldap://ldap-server.demo-ldap.svc.cluster.local
auth:
  bindDN: cn=admin,dc=sighup,dc=io
  bindPW: HatFriday
user:
  baseDN: ou=group-a,ou=system,dc=sighup,dc=io
  filter: "(cn={0})"
